<resources>
    <string name="app_name">Todo一下</string>
    <string name="menu_main_search">搜索</string>
    <string name="menu_main_settings">设置</string>
    <string name="what_todo">准备做啥？</string>
    <string name="menu_maketodo_settag">设置标签</string>
    <string name="menu_maketodo_setdate">设置提醒日期</string>
    <string name="menu_maketodo_settime">设置提醒时间</string>
    <string name="bottom_appbar_maketodo_title">无定时</string>
    <string name="menu_maketodo_notice">提醒开关</string>
    <string name="menu_maketodo_priority">修改优先级</string>
    <string name="prefix_text_maketodo_date">啥时候做：</string>
    <string name="menu_main_tags">标签管理</string>
    <string name="tag_tips">输入完后，点击回车添加标签</string>
    <string name="tag_already_create">已经有该标签</string>
    <string name="menu_action_mode_delete">删除所选项目</string>
    <string name="list_empty_background">无内容</string>

    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


    <string name="main_bottom_sheet_unlogin">未登录</string>
    <string name="menu_main_about">关于</string>
    <string name="login_password_input_hint">密码</string>
    <string name="login_account_input_hint">账号</string>
    <string name="btn_login_register">注册</string>
    <string name="btn_register_register">注册</string>
    <string name="btn_login_login">登入</string>
    <string name="text_register_title">注册</string>
    <string name="text_login_title">登入</string>
    <string name="register_password_input_hint">密码 8-32 位</string>
    <string name="register_account_input_hint">账号 8-32 位</string>
    <string name="register_confirm_password_input_hint">确认密码 8-32 位</string>
    <string name="register_input_err_length">长度不正确</string>
    <string name="register_input_err_confirm_fail">两次输入不一致</string>
    <string name="change_password_input_err_new_password_fail">不能和旧密码一致</string>
    <string name="toast_register_input_err">输入不合法</string>
    <string name="btn_user_center_logout">登出</string>

    <string name="toast_http_net_err">网络请求出现问题</string>
    <string name="toast_http_login_success">登入成功</string>
    <string name="toast_http_login_fail">登入失败</string>
    <string name="toast_http_register_success">注册成功</string>
    <string name="toast_http_register_fail">注册失败</string>
    <string name="toast_http_logout_success">登出成功</string>
    <string name="toast_http_logout_fail">登出失败</string>
    <string name="toast_http_sync_success">同步成功</string>
    <string name="toast_http_sync_fail">同步失败</string>

    <string name="toast_make_todo_no_tags">没有标签</string>

    <string name="menu_main_done">已完成的</string>

    <string name="dialog_confirm_logout_title">确认要登出吗？</string>
    <string name="dialog_confirm_logout_message">会清空所有数据，未同步的会丢失</string>

    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="btn_user_center_change_password">修改密码</string>
    <string name="text_change_password_title">修改密码</string>
    <string name="input_hint_change_password_new_password">新密码 8-32 位</string>
    <string name="input_hint_change_password_old_password">旧密码</string>
    <string name="input_hint_change_password_confirm_new_password">确认新密码</string>
    <string name="btn_change_password_change_password">修改密码</string>

    <string name="notification_push_done">推送到通知栏→</string>

    <string name="notification_action_done">完成</string>
    <string name="notification_action_wait">稍后提醒</string>

    <string name="text_about_coolapk_title">下载地址：</string>
    <string name="text_about_coolapk_content">点击跳转</string>
    <string name="text_about_github_title">GitHub 项目地址：</string>
    <string name="text_about_github_content">newSimpleNotification</string>
    <string name="text_about_author_title">客户端作者：</string>
    <string name="text_about_author_content">\@野良人</string>
    <string name="text_about_author2_title">服务端作者：</string>
    <string name="text_about_author2_content">\@WEGFan</string>
    <string name="text_about_bottom">Copyright © 2019 NoraH1to</string>
    <string name="address_download_coolapk">
        https://github.com/SterbenJ/newSimpleNotification
    </string>
    <string name="address_github_project">
        https://github.com/SterbenJ/newSimpleNotification
    </string>
    <string name="address_author_norah1to">https://www.coolapk.com/u/494291</string>
    <string name="address_author_wegfan">https://www.coolapk.com/u/512445</string>

    <string name="setting_head_action">行为</string>
    <string name="setting_content_title_acton_make_alarm_when_notification">
        右滑推送到通知栏的同时创建提醒
    </string>
    <string name="setting_content_title_action_wait_notice_min">稍后提醒间隔时间</string>
    <string name="setting_head_notice_date">默认第二天的提醒时间</string>
    <string name="setting_content_title_notice_date_hour">小时</string>
    <string name="setting_content_title_notice_date_min">分钟</string>
    <string name="setting_head_when_start_second_day">第二天从什么时间开始</string>
    <string name="setting_content_title_start_second_day_hour">小时</string>
    <string name="setting_content_title_start_second_day_min">分钟</string>
</resources>
