<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/setting_head_action">

        <SwitchPreferenceCompat
            app:key="pref_makeAlarmWhenNotification"
            app:defaultValue="false"
            app:title="@string/setting_content_title_acton_make_alarm_when_notification" />

        <DropDownPreference
            app:key="pref_wait_notice_min"
            app:defaultValue="15"
            app:title="@string/setting_content_title_action_wait_notice_min"
            app:entries="@array/notice_wait_mins_display"
            app:entryValues="@array/notice_wait_mins_values"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/setting_head_notice_date">

        <DropDownPreference
            app:key="pref_notice_date_hour"
            app:title="@string/setting_content_title_notice_date_hour"
            app:defaultValue="10"
            app:entries="@array/hours_display"
            app:entryValues="@array/hours_values"
            app:useSimpleSummaryProvider="true"/>

        <DropDownPreference
            app:key="pref_notice_date_min"
            app:title="@string/setting_content_title_notice_date_min"
            app:defaultValue="0"
            app:entries="@array/mins_display"
            app:entryValues="@array/mins_values"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/setting_head_when_start_second_day">

        <DropDownPreference
            app:key="pref_when_second_day_start_hour"
            app:title="@string/setting_content_title_start_second_day_hour"
            app:defaultValue="0"
            app:entries="@array/second_day_hours_display"
            app:entryValues="@array/second_day_hours_values"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

</PreferenceScreen>
