<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuitem_maketodo_setdate"
        android:title="@string/menu_maketodo_setdate"
        android:icon="@drawable/ic_date_range_black_24dp"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menuitem_maketodo_settime"
        android:title="@string/menu_maketodo_settime"
        android:icon="@drawable/ic_schedule_black_24dp"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menuitem_maketodo_priority"
        android:title="@string/menu_maketodo_priority"
        android:icon="@drawable/ic_priority_gray_24dp"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menuitem_maketodo_notice"
        android:title="@string/menu_maketodo_notice"
        android:icon="@drawable/ic_notifications_off_grey_24dp"
        app:showAsAction="always"/>
</menu>