<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.ChangePasswordActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_change_password_title"
        android:textColor="@color/color_primary_variant"
        android:textSize="64sp"
        android:layout_margin="64dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/input_layout_change_password_old_password"
        android:text="@string/text_change_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_change_password_old_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:focusable="true"
        app:counterEnabled="true"
        app:counterMaxLength="32"
        app:passwordToggleEnabled="true"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/input_layout_change_password_new_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_change_password_old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:nextFocusDown="@id/input_layout_change_password_new_password"
            android:hint="@string/input_hint_change_password_old_password" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_change_password_new_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:counterEnabled="true"
        app:counterMaxLength="32"
        app:passwordToggleEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_change_password_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="textPassword"
            android:imeOptions="actionNext"
            android:nextFocusDown="@id/input_layout_change_password_confirm_new_password"
            android:hint="@string/input_hint_change_password_new_password" />
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_change_password_confirm_new_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:counterEnabled="true"
        app:counterMaxLength="32"
        app:passwordToggleEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_layout_change_password_new_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_change_password_confirm_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:imeActionLabel="@string/btn_register_register"
            android:hint="@string/input_hint_change_password_confirm_new_password"/>
    </com.google.android.material.textfield.TextInputLayout>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_below="@id/input_layout_change_password_confirm_new_password">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_change_password_change_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/btn_change_password_change_password"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.50"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>